--- a/src/main/resources/templates/admin/new.html
+++ b/src/main/resources/templates/admin/new.html
@@ -6,7 +6,11 @@
 </head>
 <body>
 
-<form th:method="POST" th:action="@{/}" th:object="${user}">
+<div style="text-align: right;">
+    <a th:href="@{/logout}">Logout</a>
+</div>
+
+<form th:method="POST" th:action="@{/admin/}" th:object="${user}">
     <label for="firstname">Enter name:</label>
     <input type="text" th:field="*{firstName}" id="firstname"/>
     <div style="color:red" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Name error</div>
@@ -26,9 +30,9 @@
     <label>Roles:
         <input type="checkbox" name="roles"
                th:each="role : ${allRoles}"
-               th:text="${role.name}"
-               th:value="${role.id}"
-               th:checked="${user.roles}"
+               th:text="${role.name.split('_')[1]}"
+               th:value="${role.getId()}"
+               th:checked="${user.roles != null && user.roles.contains(role)}"
                th:field="*{roles}"
         />
     </label>
