--- a/src/main/resources/templates/user/userPage.html
+++ b/src/main/resources/templates/user/userPage.html
@@ -1,53 +1,95 @@
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Spring Security Example</title>
-    <style>
-        /* Стили для размещения Welcome слева и Logout справа */
-        .header {
-            display: flex;
-            justify-content: space-between; /* Равномерное распределение между элементами */
-            align-items: center; /* Выравниваем вертикально по центру */
-            background-color: lightgray; /* Добавляем фоновый цвет для заголовка */
-            padding: 10px; /* Отступы для заголовка */
-        }
-
-        .welcome-text {
-            text-decoration: none; /* Убираем подчеркивание текста */
-            color: black; /* Цвет текста "Welcome" */
-            font-weight: bold; /* Увеличиваем жирность текста "Welcome" */
-        }
-
-        .logout-link {
-            text-decoration: none; /* Убираем подчеркивание ссылки */
-            color: blue; /* Цвет текста ссылки "Logout" */
-            font-weight: bold; /* Увеличиваем жирность текста "Logout" */
-        }
-        label {
-            font-weight: bold;
-        }
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Bootstrap demo</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 <body>
-<div class="header">
-    <a class="welcome-text" th:utext="${person.firstName} + ', welcome spring boot security page!'">Welcome User</a>
-    <a th:href="@{/logout}" class="logout-link">Logout</a>
+<nav class="navbar navbar-dark bg-dark navbar-expand">
+    <div class="container-fluid">
+        <ul class="navbar-nav text-light">
+            <li class="nav-item">
+                <p th:text="${person.email} + ' with role:'">Email</p>
+            </li>
+            <li class="nav-item ms-2">
+                <th:block th:each="role : ${person.getRoles()}" th:text="${role} + ' '">Roles</th:block>
+            </li>
+        </ul>
+        <a class="btn btn-dark" th:href="@{/logout}" type="submit">Logout </a>
+    </div>
+</nav>
+
+<div class="container-fluid">
+    <div class="row flex-nowrap">
+        <div class="col-auto col-md-1 col-xl-2 px-sm-1 px-0 bg-white">
+            <div class="d-flex flex-column min-vh-100">
+                <ul class="nav nav-pills nav-fill flex-column mb-sm-auto mb-0" id="menu">
+                    <li class="nav-item" th:each="role : ${person.roles}">
+                        <a class="nav-link text-start" aria-current="page" th:if="${role.name == 'ROLE_ADMIN'}" href="/admin">Admin</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-start" href="/user">User</a>
+                    </li>
+                </ul>
+                <hr>
+            </div>
+        </div>
+        <div class="col py-3 bg-body-secondary">
+            <h1>User information page</h1>
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade show active" id="all-tab-pane" role="tabpanel" aria-labelledby="all-tab"
+                     tabindex="0">
+                    <div class="container-fluid bg-body-secondary border border-2">
+                        <h4>About user</h4>
+                    </div>
+                    <div class="container-fluid bg-white p-4 border border-2">
+                        <table class="table border-top">
+                            <thead>
+                            <tr>
+                                <th scope="col">Id</th>
+                                <th scope="col">Name</th>
+                                <th scope="col">Last Name</th>
+                                <th scope="col">Email</th>
+                                <th scope="col">Role</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <th th:text="${person.getId()}" scope="row">Id</th>
+                            <td th:text="${person.getFirstName()}">FirstName</td>
+                            <td th:text="${person.getLastName()}">LastName</td>
+                            <td th:text="${person.getEmail()}">Email</td>
+                            <td>
+                                <th:block th:each="role : ${person.getRoles()}" th:text="${role} + ' '">Roles
+                                </th:block>
+                            </td>
+<!--                            <th:block th:each="user : ${users}">-->
+<!--                                <tr class="user-container">-->
+<!--                                    <td><h1 th:text="${user.getFirstName()}">FirstName</h1></td>-->
+<!--                                    <td><h1 th:text="${user.getLastName()}">LastName</h1></td>-->
+<!--                                    <td><h1 th:text="${user.getEmail()}">Email</h1></td>-->
+<!--                                    <td class="button-container">-->
+<!--                                        <form th:action="@{/admin/edit}">-->
+<!--                                            <button type="submit" th:name="id" th:value="${user.getId()}">Edit</button>-->
+<!--                                        </form>-->
+<!--                                        <form th:method="POST" th:action="@{/admin/delete}">-->
+<!--                                            <button type="submit" th:name="id" th:value="${user.getId()}">Delete</button>-->
+<!--                                        </form>-->
+<!--                                    </td>-->
+<!--                                </tr>-->
+<!--                            </th:block>-->
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<label for="firstname">Firstname : </label>
-<p th:text="${person.firstName}" id="firstname"></p>
-<br/>
-<label for="lastname">Lastname : </label>
-<p th:text="${person.lastName}" id="lastname"></p>
-<br/>
-<label for="email">Email : </label>
-<p th:text="${person.email}" id="email"></p>
-<br/>
-<label for="roles">Roles : </label>
-<br/>
-<tr th:each="role : ${person.roles}" id="roles">
-    <td th:text="${role}">nameOfRole</td>
-    <br/>
-</tr>
-<br/>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 </body>
 </html>
